parser/y.output

state 0
	$accept: .top $end 

	'('  shift 3
	'\''  shift 4
	.  error

	top  goto 1
	expr  goto 2

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  expr.    (1)

	.  reduce 1 (src line 31)


state 3
	expr:  '('.')' 
	expr:  '('.atoms ')' 
	expr:  '('.atom '.' atom ')' 

	'('  shift 3
	')'  shift 5
	'\''  shift 4
	NUMBER  shift 9
	IDENT  shift 8
	STRING  shift 10
	.  error

	expr  goto 11
	atom  goto 7
	atoms  goto 6

state 4
	expr:  '\''.expr 

	'('  shift 3
	'\''  shift 4
	.  error

	expr  goto 12

state 5
	expr:  '(' ')'.    (2)

	.  reduce 2 (src line 37)


state 6
	expr:  '(' atoms.')' 

	')'  shift 13
	.  error


state 7
	expr:  '(' atom.'.' atom ')' 
	atoms:  atom.    (6)
	atoms:  atom.atoms 

	'('  shift 3
	'.'  shift 14
	'\''  shift 4
	NUMBER  shift 9
	IDENT  shift 8
	STRING  shift 10
	.  reduce 6 (src line 44)

	expr  goto 11
	atom  goto 16
	atoms  goto 15

state 8
	atom:  IDENT.    (8)

	.  reduce 8 (src line 48)


state 9
	atom:  NUMBER.    (9)

	.  reduce 9 (src line 50)


state 10
	atom:  STRING.    (10)

	.  reduce 10 (src line 51)


state 11
	atom:  expr.    (11)

	.  reduce 11 (src line 52)


state 12
	expr:  '\'' expr.    (5)

	.  reduce 5 (src line 41)


state 13
	expr:  '(' atoms ')'.    (3)

	.  reduce 3 (src line 39)


state 14
	expr:  '(' atom '.'.atom ')' 

	'('  shift 3
	'\''  shift 4
	NUMBER  shift 9
	IDENT  shift 8
	STRING  shift 10
	.  error

	expr  goto 11
	atom  goto 17

state 15
	atoms:  atom atoms.    (7)

	.  reduce 7 (src line 46)


state 16
	atoms:  atom.    (6)
	atoms:  atom.atoms 

	'('  shift 3
	'\''  shift 4
	NUMBER  shift 9
	IDENT  shift 8
	STRING  shift 10
	.  reduce 6 (src line 44)

	expr  goto 11
	atom  goto 16
	atoms  goto 15

state 17
	expr:  '(' atom '.' atom.')' 

	')'  shift 18
	.  error


state 18
	expr:  '(' atom '.' atom ')'.    (4)

	.  reduce 4 (src line 40)


11 terminals, 5 nonterminals
12 grammar rules, 19/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
54 working sets used
memory: parser 10/240000
8 extra closures
28 shift entries, 1 exceptions
9 goto entries
5 entries saved by goto default
Optimizer space used: output 36/240000
36 table entries, 6 zero
maximum spread: 10, maximum offset: 14
